@@ -349,10 +349,13 @@ Unreleased changes (1.0-dev)
 130. NUTCH-563 - Include custom fields in BasicQueryFilter
      (Julien Nioche via siren)
      
-131. NUTCH-695 - incorrect mime type detection by MoreIndexingFilter plugin
+131. NUTCH-695 - Incorrect mime type detection by MoreIndexingFilter plugin
      (Dmitry Lihachev via siren)
      
 132. NUTCH-694 - Distributed Search Server fails (siren)
+
+133. NUTCH-626 - Fetcher2 breaks out the domain with db.ignore.external.links
+     set at cross domain redirects (Remco Verhoef, dogacan via siren)
 
 Release 0.9 - 2007-04-02
 
